# rag-knowledge-assistant

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Dockerfile.eval  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-api.txt  requirements-eval.txt  requirements-hf.txt  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
deploy/hf-space/: DEPLOY_GUIDE.md  Dockerfile  space_README.md  start.sh
deploy/streamlit-cloud/: DEPLOY_GUIDE.md
eval/: run_eval.py
eval/results/: compare-20260708T041312Z.json  compare-20260708T041312Z.md  eval-20260705T085510Z.json  eval-20260705T085510Z.md
src/rag/: __init__.py  api.py  chunking.py  config.py  embeddings.py  ingest.py  lexical.py  llm.py  observability.py  pipeline.py  prompts.py  retriever.py  vectorstore.py
tests/: conftest.py  test_analytics.py  test_eval_results.py  test_features.py  test_hf.py  test_pipeline.py  test_upload.py
ui/: common.py  demo_backend.py  streamlit_app.py
ui/views/: analytics.py  chat.py  corpus.py  evaluation.py  guide.py
